@@ -110,6 +110,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #28488: shutil.make_archive() no longer add entry "./" to ZIP archive.
+
 - Issue #24452: Make webbrowser support Chrome on Mac OS X.
 
 - Issue #20766: Fix references leaked by pdb in the handling of SIGINT
